trustStore configuration keys updated